# GBEMU

./: .gitignore  CMakeLists.txt  Devlog.docx  README.md
gbemu/: CMakeLists.txt  main.c
include/: bus.h  cart.h  common.h  cpu.h  emu.h  instructions.h  ram.h  stack.h  timer.h
lib/: CMakeLists.txt  bus.c  cart.c  cpu.c  cpu.fetch.c  cpu_proc.c  cpu_util.c  emu.c  instructions.c  ram.c  stack.cpp
tests/: CMakeLists.txt
